syntax = "proto3";

message Target {
    bytes uuid = 1;
    oneof access {
        SSHAccess ssh = 2;
    }
}

message SSHAccess {
    string host = 1;
    string user = 2;
    uint32 port = 3;
    string private_key = 4;
    // sudo
    bool become = 5;
    string become_password = 6;
}

message TaskCollectDisk {
    string device_name = 2;
}

message TaskCollectDiskResult {

}

message TaskCollectMemory {

}

message TaskCollectMemoryResult {

}

message TaskCollectDiskinfo {

}

message TargetDiskinfo {
    string device_name = 1;
    uint64 size = 2;
    string type = 3;
    string mountpoint = 4;
}

message TaskCollectDiskinfoResult {
    repeated TargetDiskinfo diskinfos = 1;
}

message TaskIngest {
	bytes collected_uuid = 1;
}

message TaskIngestResult {

}
